--- a/src/main/resources/templates/curso/listaCursos.html
+++ b/src/main/resources/templates/curso/listaCursos.html
@@ -8,6 +8,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+    <script th:inline = "javascript">
+
+        function alertaExclusao(id) {
+            
+            var resposta = confirm ("Prosseguir com exclusão? Ao excluir um curso irá também excluir todos os alunos e professores relacionados a ele");
+            if (resposta == true) {
+                fetch(id + "/delete"), {
+                method: "GET"
+                };
+            };
+            document.location.reload(true)
+        }
+
+    </script>
     <style>
         /* Set height of the grid so .sidenav can be 150% (adjust if needed) */
         .row.content {height: 1150px}
@@ -67,7 +81,7 @@
                     
                         <a class="btn btn-info btn-md"    role="button" th:href="@{/cursos/show/{cursoId}(cursoId = ${c.id})}"   ><span class="iconify" data-icon="mdi:account-details" style="color: white; font-size: 17px; vertical-align:text-bottom;" ></span> Detalhar</a>
                         <a class="btn btn-primary btn-md" role="button" th:href="@{/cursos/{cursoId}/edit(cursoId = ${c.id})}"   ><span class="iconify" data-icon="charm:pencil" style="font-size: 17px; vertical-align:text-bottom;" ></span> Editar</a>
-                        <a class="btn btn-danger btn-md"  role="button" th:href="@{/cursos/{cursoId}/delete(cursoId = ${c.id})}" ><span class="iconify" data-icon="clarity:remove-solid" style="color: white; font-size: 17px; vertical-align:text-bottom;" ></span> Deletar</a>
+                        <a class="btn btn-danger btn-md" th:onclick="|alertaExclusao(${c.id} )|"><span class="iconify" data-icon="clarity:remove-solid" style="color: white; font-size: 17px; vertical-align:text-bottom;" ></span> Deletar</a>
                     
                     </td>
 
